<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:id="@+id/test_linear_layout"
    android:background="@color/White">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_container_size"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/widget_subreddit_tv"
            android:layout_weight="1"
            android:layout_gravity="center"
            style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@color/Black"
            android:layout_marginLeft="@dimen/slim_margins"
            android:layout_marginStart="@dimen/slim_margins"/>

        <ImageButton
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_gravity="center"
            android:id="@+id/widget_edit_btn"
            android:background="@drawable/ic_action_edit"
            android:contentDescription="@string/edit"/>

        <ImageButton
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:background="@drawable/ic_action_refresh"
            android:layout_gravity="center"
            android:id="@+id/widget_refresh_iv"
            android:contentDescription="@string/refresh"/>
        <ImageButton
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_gravity="center"
            android:id="@+id/widget_home_btn"
            android:background="@drawable/ic_action_home"
            android:layout_marginRight="@dimen/slim_margins"
            android:contentDescription="@string/home"
            android:layout_marginEnd="@dimen/slim_margins"/>
    </LinearLayout>

    <ListView
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/widget_rv">
    </ListView>

</LinearLayout>